# typing_python

./: README.md  pyproject.toml
src/aula001/: main.py
src/aula002/: main.py
src/aula003/: main.py
src/aula004/: main.py
src/aula005/: main.py
src/resource/: utils.py
